src/snapshots/pbsql__treeqlite__tests__execute_query__create_index.snap
---
source: src/treeqlite.rs
expression: report
---
dumps_by_path:
  "./test-db/create_index/books/eloScores.tql.sqlite3":
    - PRAGMA foreign_keys = OFF;
    - BEGIN
    - TRANSACTION;
    - CREATE TABLE table_contents (
    - "  thing_id INTEGER PRIMARY KEY NOT NULL,"
    - "  score INT NOT NULL"
    - );
    - CREATE INDEX tbl_scoreIndex ON table_contents(score);
    - COMMIT;
rows_changed_or_error:
  Ok: 0
original_query:
  - "CREATE INDEX \"scoreIndex\" ON \"~/books/eloScores\" (score)"
params: "null"
