src/snapshots/pbsql__treeqlite__tests__execute_query__create_table.snap
---
source: src/treeqlite.rs
expression: report
---
dumps_by_path:
  Ok:
    "./test-db/create_table/books/things.tql.sqlite3":
      - PRAGMA foreign_keys = OFF;
      - BEGIN
      - TRANSACTION;
      - CREATE TABLE table_contents (
      - "  \"excluded\" BOOLEAN NOT NULL DEFAULT false,"
      - "  \"externalLink\" TEXT NOT NULL,"
      - "  \"externalLinkTitle\" TEXT NOT NULL,"
      - "  \"id\" TEXT PRIMARY KEY NOT NULL,"
      - "  \"imageUrl\" TEXT NOT NULL,"
      - "  \"subtitle\" TEXT NULL,"
      - "  \"title\" TEXT NOT NULL"
      - );
      - INSERT INTO
      - "  table_contents"
      - VALUES
      - (
      - "    0,"
      - "    'https://example.com/gatsby',"
      - "    'Gatsby',"
      - "    '1',"
      - "    'https://example.com/gatsby.jpg',"
      - "    NULL,"
      - "    'The Great Gatsby'"
      - "  );"
      - INSERT INTO
      - "  table_contents"
      - VALUES
      - (
      - "    0,"
      - "    'https://example.com/catcher',"
      - "    'Catcher',"
      - "    '2',"
      - "    'https://example.com/catcher.jpg',"
      - "    NULL,"
      - "    'The Catcher in the Rye'"
      - "  );"
      - INSERT INTO
      - "  table_contents"
      - VALUES
      - (
      - "    0,"
      - "    'https://example.com/mockingbird',"
      - "    'Mockingbird',"
      - "    '3',"
      - "    'https://example.com/mockingbird.jpg',"
      - "    NULL,"
      - "    'To Kill a Mockingbird'"
      - "  );"
      - COMMIT;
original_query:
  - "CREATE TABLE IF NOT EXISTS \"~/books/things\" ("
  - "    \"excluded\" BOOLEAN NOT NULL DEFAULT FALSE,"
  - "    \"externalLink\" TEXT NOT NULL,"
  - "    \"externalLinkTitle\" TEXT NOT NULL,"
  - "    \"id\" TEXT PRIMARY KEY NOT NULL,"
  - "    \"imageUrl\" TEXT NOT NULL,"
  - "    \"subtitle\" TEXT NULL,"
  - "    \"title\" TEXT NOT NULL"
  - );
  - "INSERT INTO \"~/books/things\" (\"id\", \"title\", \"imageUrl\", \"externalLink\", \"externalLinkTitle\")"
  - "    VALUES ('1', 'The Great Gatsby', 'https://example.com/gatsby.jpg', 'https://example.com/gatsby', 'Gatsby'),"
  - "    ('2', 'The Catcher in the Rye', 'https://example.com/catcher.jpg', 'https://example.com/catcher', 'Catcher'),"
  - "    ('3', 'To Kill a Mockingbird', 'https://example.com/mockingbird.jpg', 'https://example.com/mockingbird', 'Mockingbird');"
