src/snapshots/pbsql__treeqlite__tests__execute_query__update_no_match.snap
---
source: src/treeqlite.rs
expression: report
---
dumps_by_path:
  "./test-db/update_no_match/books/eloScores.tql.sqlite3":
    - PRAGMA foreign_keys = OFF;
    - BEGIN
    - TRANSACTION;
    - CREATE TABLE table_contents (
    - "  \"thingId\" TEXT PRIMARY KEY NOT NULL,"
    - "  \"score\" INT NOT NULL"
    - );
    - COMMIT;
rows_changed_or_error:
  Ok: 0
original_query:
  - "UPDATE \"~/books/eloScores\" SET \"score\" = ? WHERE \"thingId\" = ?"
params: "[100,\"thing1\"]"
